--- a/_studies/2020-05-08_10.3390_pr8050549.md
+++ b/_studies/2020-05-08_10.3390_pr8050549.md
@@ -2,10 +2,10 @@
 date:        2020-05-08
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Process
+title:       Processes
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Meneguzzo, F, Ciriminna, R, Zabini, F et al.'
+authors:      'Meneguzzo, F, Ciriminna, R, Zabini, F, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
