--- a/_studies/2020-06-06_10.1016_j.mehy.2020.109957.md
+++ b/_studies/2020-06-06_10.1016_j.mehy.2020.109957.md
@@ -1,7 +1,7 @@
 ---
 date:        2020-06-06
 title:       Medical Hypotheses 
-authors:      'Haggaga1, YA, El-Ashmawy, NE, Okasha, KM'
+authors:      'Haggaga, YA, El-Ashmawy, NE, Okasha, KM'
 status:       default
 en:
   subtitle:    'Is hesperidin essential for prophylaxis and treatment of COVID-19 Infection?'
