--- a/_studies/2020-06-25_10.1002_rmv.2119.md
+++ b/_studies/2020-06-25_10.1002_rmv.2119.md
@@ -5,7 +5,7 @@ date:        2020-06-25
 title:       Reviews in Medical Virology
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Malek Mahdavi, A.'
+authors:      'Malek Mahdavi, A'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
@@ -33,7 +33,7 @@ de:
 group:       "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit:      https://doi.org/10.1002/rmv.2119/
+credit:       https://doi.org/10.1002/rmv.2119
 ## Link zur Studien-Website.
 ##
 ##
