--- a/_studies/2020-09-15_10.1099_jmm.0.001250.md
+++ b/_studies/2020-09-15_10.1099_jmm.0.001250.md
@@ -1,7 +1,7 @@
 ---
 date:        2020-09-15
 title:       Journal of Medical Microbiology
-authors:      'Carlucci, PM, Ahuja, T, Petrilli, C., et al.'
+authors:      'Carlucci, PM, Ahuja, T, Petrilli, C, et al.'
 status:       default
 en:
   subtitle:    'Zinc sulfate in combination with a zinc ionophore may improve outcomes in hospitalized COVID-19 patients'
