--- a/_studies/2020-09-17_10.1371_journal.pone.0239252.md
+++ b/_studies/2020-09-17_10.1371_journal.pone.0239252.md
@@ -1,6 +1,6 @@
 ---
-date:        2020-09-30
-title:       Plos One 
+date:        2020-09-17
+title:       PloS ONE 
 authors:      'Kaufman, HW, Niles, JK, Kroll, MH, et al.'
 status:     default
 en:
