--- a/_studies/2020-12-07_10.3389_fnut.2020.606398.md
+++ b/_studies/2020-12-07_10.3389_fnut.2020.606398.md
@@ -1,7 +1,7 @@
 ---
 date:        2020-12-07
 title:       Frontiers in Nutrition 
-authors:      'Name, JJ, Remondi Souza1, AC, Rodrigues Vasconcelos, A, et al.'
+authors:      'Name, JJ, Remondi Souza, AC, Rodrigues Vasconcelos, A, et al.'
 status:        default
 en:
   subtitle:    'Zinc, Vitamin D and Vitamin C: Perspectives for COVID-19 With a Focus on Physical Tissue Barrier Integrity'
