--- a/_studies/2020-12-23_10.3389_fcvm.2020.616527.md
+++ b/_studies/2020-12-23_10.3389_fcvm.2020.616527.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Untersuchung des Potenzials von ultraviolettem Licht zur Beeinflussung der Morbidität und Mortalität durch COVID-19: A Narrative Review and Update'
+  subtitle:    'Untersuchung des Potenzials von ultraviolettem Licht zur Beeinflussung der Morbidität und Mortalität durch COVID-19: Ein narrativer Rückblick und Update'
   ##
   description: 'Während der COVID-19-Pandemie (Coronavirus-Krankheit des Jahres 2019) haben Forscher nach kostengünstigen und leicht zugänglichen Möglichkeiten gesucht, sich vor den Schäden zu schützen, insbesondere für Risikopersonen wie Menschen mit Herz-Kreislauf-Erkrankungen, Diabetes und Fettleibigkeit. Ein möglicher Weg ist eine sichere Sonnenexposition und/oder eine Nahrungsergänzung mit induzierten positiven Mediatoren (z. B. Vitamin D). In dieser narrativen Übersichtsarbeit liefern wir Argumente und aktualisierte Belege für den potenziellen Nutzen und Schaden von Sonnenexposition und ultraviolettem (UV-)Licht, die sich auf COVID-19 auswirken können. Wir überprüfen neuere Studien, die neue Beweise für den Nutzen (oder das Gegenteil) von UV-Licht, Sonnenexposition und den induzierten Mediatoren Vitamin D und Stickstoffmonoxid sowie deren Potenzial zur Beeinflussung der durch eine Infektion mit SARS-CoV-2 (schwere akute Atemwegserkrankung - Coronavirus-2) verursachten Morbidität und Mortalität liefern. Wir haben festgestellt, dass dieses Forschungsgebiet auf großes Interesse stößt und bereits zahlreiche Kommentare und Übersichten veröffentlicht wurden. Die meisten davon konzentrieren sich jedoch auf Vitamin D und berücksichtigen weniger das UV-Licht (oder die Sonnenexposition) oder andere Mediatoren wie Stickstoffmonoxid. Die bisher gesammelten Daten deuten darauf hin, dass sowohl UVA- als auch UVB-Strahlen in der Umgebung den Schweregrad oder die Sterblichkeitsrate von COVID-19 verringern können, wobei die Ergebnisse teilweise widersprüchlich sind. Ungeklärt ist derzeit die Art des Zusammenhangs zwischen dem 25-Hydroxyvitamin-D-Spiegel im Blut und den COVID-19-Werten, wobei mehr prospektive Daten benötigt werden, die Lebensstilfaktoren wie körperliche Aktivität und persönliche Sonnenexposition besser berücksichtigen. Ein weiteres Manko war die fehlende Messung der Sonnenexposition und deren potenzieller Einfluss auf die COVID-19-Ergebnisse. Wir erörtern auch mögliche Mechanismen, durch die Sonnenexposition, UV-Licht und induzierte Mediatoren die COVID-19-Morbidität und -Mortalität beeinflussen könnten, wobei wir uns auf wahrscheinliche Auswirkungen auf die virale Pathogenese, Immunität und Entzündung sowie auf potenzielle kardiometabolische Schutzmechanismen konzentrieren. Schließlich gehen wir auf potenzielle Fragen ein, darunter die Auswirkungen hochdosierter UV-Strahlung auf COVID-19 und Impfungen sowie wirksame und sichere Dosen für die Vitamin-D-Supplementierung.'
   tags: [COVID-19, SARS-CoV-2, Vitamin D, ultraviolettes Licht, Morbidität, Mortalität, Risikopatienten]
