--- a/_studies/2021-01-06_10.1007_s11845-020-02452-8.md
+++ b/_studies/2021-01-06_10.1007_s11845-020-02452-8.md
@@ -1,7 +1,7 @@
 ---
 date:        2021-01-06
 title:       Irish Journal of Medical Science 
-authors:      'Farid, N, Rola, N, Koch, EAT et al.'
+authors:      'Farid, N, Rola, N, Koch, EAT, et al.'
 status:     default
 en:
   subtitle:    'Active vitamin D supplementation and COVID-19 infections: review'
