--- a/_studies/2021-01-08-10.1016_j.clim.2021.108665.md
+++ b/_studies/2021-01-08-10.1016_j.clim.2021.108665.md
@@ -8,7 +8,7 @@ en:
   description: 'To the Editor, I read with great interest the article by Vojdani et al., concerning the hypothesis of a molecular mimicry mechanism between the nucleoprotein/spike protein of Severe Acute Respiratory Syndrome Coronavirus 2 (SARS-CoV-2) and self-antigens. Viruses are notoriously involved in the pathogenesis of autoimmune diseases, and the authors reasonably conclude that such a cross-reactivity might lead to the development of immune-mediated disorders in COronaVirus Disease-19 (COVID-19) patients in the long term. The authors also suggest that a similar scenario might take place following COVID-19 vaccination.'
   tags: [Autoimmunity, Autoinflammation, COVID-19, Immune response, mRNA vaccine, SARS-CoV-2, Type I interferon]
 de: 
-  subtitle:    'Stellen COVID-19-Impfstoffe auf RNA-Basis ein Risiko für immunvermittelte Krankheiten dar? In Antwort auf "Potenzielle antigene Kreuzreaktivität zwischen SARS-CoV-2 und menschlichem Gewebe mit möglicher Verbindung zu einer Zunahme von Autoimmunerkrankungen"'
+  subtitle:    'Stellen COVID-19-Impfstoffe auf RNA-Basis ein Risiko für immunvermittelte Krankheiten dar? Antwort auf "Potenzielle antigene Kreuzreaktivität zwischen SARS-CoV-2 und menschlichem Gewebe mit möglicher Verbindung zu einer Zunahme von Autoimmunerkrankungen"'
   description: 'Mit großem Interesse habe ich den Artikel von Vojdani et al. über die Hypothese eines molekularen Mimikry-Mechanismus zwischen dem Nukleoprotein/Spike-Protein des Coronavirus 2 des Schweren Akuten Respiratorischen Syndroms (SARS-CoV-2) und Selbstantigenen gelesen. Viren sind bekanntermaßen an der Entstehung von Autoimmunkrankheiten beteiligt, und die Autoren ziehen den Schluss, dass eine solche Kreuzreaktivität langfristig zur Entwicklung immunvermittelter Störungen bei COronaVirus Disease-19 (COVID-19) Patienten führen könnte. Die Autoren vermuten auch, dass ein ähnliches Szenario nach einer COVID-19-Impfung eintreten könnte.'
   tags: [Autoimmunität, Autoinflammation, COVID-19, Immunantwort, mRNA-Impfstoff, SARS-CoV-2, Typ-I-Interferon]
 group:       "Treatments"
