--- a/_studies/2021-01-19_ 10.1002_JLB.4COVR1020-698R.md
+++ b/_studies/2021-01-19_ 10.1002_JLB.4COVR1020-698R.md
@@ -1,7 +1,7 @@
 ---
 date:        2021-01-19
 title:       Journal of Leukocyte Biologyy 
-authors:      'Verma, S, Chaturvedi, V, Ganguly, NK et al.'
+authors:      'Verma, S, Chaturvedi, V, Ganguly, NK, et al.'
 status:     default
 en:
   subtitle:    'Role of vitamin D in regulating COVID-19 severity—An immunological perspective'
