--- a/_studies/2021-01-19_10.1016_j.eclinm.2020.100720.md
+++ b/_studies/2021-01-19_10.1016_j.eclinm.2020.100720.md
@@ -1,6 +1,6 @@
 ---
 date:        2021-01-19
-title:       The Lancet 
+title:       EClinicalMedicine
 authors:     'Chaccour, C, Casellas, A, Blanco-Di Matteo, A, et al.'
 status:     default
 en:
@@ -8,7 +8,7 @@ en:
   description: 'Ivermectin inhibits the replication of SARS-CoV-2 in vitro at concentrations not readily achievable with currently approved doses. There is limited evidence to support its clinical use in COVID-19 patients. We conducted a Pilot, randomized, double-blind, placebo-controlled trial to evaluate the efficacy of a single dose of ivermectin reduce the transmission of SARS-CoV-2 when administered early after disease onset.'
   tags: [Ivermectin, SARS-CoV-2, COVID-19, Anosmia, Hyposmia]
 de: 
-  subtitle:    'Die Wirkung einer frühzeitigen Behandlung mit Ivermectin auf die Viruslast, die Symptome und die humorale Reaktion bei Patienten mit nicht schwerem COVID-19: Eine doppelblinde, placebokontrollierte, randomisierte klinische Pilotstudie'
+  subtitle:    'Die Wirkung einer frühzeitigen Behandlung mit Ivermectin auf die Viruslast, die Symptome und die humorale Reaktion bei Patienten mit leichtem COVID-19-Verlauf: Eine doppelblinde, placebokontrollierte, randomisierte klinische Pilotstudie'
   description: 'Ivermectin hemmt die Replikation von SARS-CoV-2 in vitro in Konzentrationen, die mit den derzeit zugelassenen Dosierungen nicht ohne Weiteres erreicht werden können. Für seinen klinischen Einsatz bei COVID-19-Patienten gibt es nur begrenzte Belege. Wir haben eine randomisierte, doppelblinde, placebokontrollierte Pilotstudie durchgeführt, um die Wirksamkeit einer Einzeldosis Ivermectin zur Verringerung der Übertragung von SARS-CoV-2 zu untersuchen, wenn diese früh nach Ausbruch der Krankheit verabreicht wird.'
   tags: [Ivermectin, SARS-CoV-2, COVID-19, Anosmie, Hyposmie]
 group:       "Treatments"
