--- a/_studies/2021-02-17_10.3389_fphar.2020.586993.md
+++ b/_studies/2021-02-17_10.3389_fphar.2020.586993.md
@@ -5,7 +5,7 @@ date:        2021-02-17
 title:       Frontiers in Pharmacology
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Omrani1, M, Keshavarz, M, Ebrahimi, SN, et al.'
+authors:      'Omrani, M, Keshavarz, M, Ebrahimi, SN, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
