--- a/_studies/2021-03-04_10.3390_microorganisms9030525.md
+++ b/_studies/2021-03-04_10.3390_microorganisms9030525.md
@@ -5,7 +5,7 @@ date:        2021-03-04
 title:       Microorganisms
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Inchingolo, AD, Inchingolo, AM. Bordea, IR, et al.'
+authors:      'Inchingolo, AD, Inchingolo, AM, Bordea, IR, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 en:
