--- a/_studies/2021-03-05_10.3389_fpubh.2021.624559.md
+++ b/_studies/2021-03-05_10.3389_fpubh.2021.624559.md
@@ -5,7 +5,7 @@ date:        2021-03-05
 title:       Frontiers in Public Health
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Teshome, A, Adane, A, Girma1, B, et al.'
+authors:      'Teshome, A, Adane, A, Girma, B, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 status:         default
 ##
