--- a/_studies/2021-03-13_10.1016_j.dsx.2021.03.006.md
+++ b/_studies/2021-03-13_10.1016_j.dsx.2021.03.006.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Auswirkungen des Vitamin-D-Mangels auf die COVID-19-Infektion und -Mortalität in asiatischen Ländern'
+  subtitle:    'Auswirkungen des Vitamin-D-Mangels auf die COVID-19-Infektion und Mortalität in asiatischen Ländern'
   ##
   description: 'COVID-19 ist eine Pandemie, von der weltweit über 100 Millionen Menschen betroffen sind und die fast 3 Millionen Todesfälle verursacht hat. Vitamin D ist ein bekannter Risikofaktor für COVID-19. Daher wollten wir den Zusammenhang zwischen der Prävalenz des Vitamin-D-Mangels und dem durchschnittlichen Vitamin-D-Spiegel mit der COVID-19-Infektion und der Sterblichkeit in Asien untersuchen, wobei wir andere Störfaktoren wie das Durchschnittsalter, Fettleibigkeit und Diabetes mit einbeziehen wollten. Die COVID-19-Infektionen und -Mortalität in den asiatischen Ländern wurden von der Worldometer-Website abgerufen. Informationen über die Prävalenz des Vitamin-D-Mangels und die durchschnittlichen Vitamin-D-Werte in den einzelnen asiatischen Ländern wurden durch eine Literatursuche in PubMed® und Google scholar ermittelt. Die Zusammenhänge zwischen COVID-19-Infektionen und Sterblichkeit mit der Prävalenz des Vitamin-D-Mangels und dem durchschnittlichen Vitamin-D-Spiegel wurden anhand von Korrelationskoeffizienten untersucht. Als prädiktive Analyse wurde eine multiple lineare Regression mit allen Störfaktoren durchgeführt. Diese ergab positive Korrelationen zwischen der Prävalenz des Vitamin-D-Mangels und den COVID-19-Infektionen und -Mortalitäten. Darüber hinaus verbesserten sich die Zusammenhänge für COVID-19-Infektionen und Sterblichkeit insbesondere nach der Kombination mit den Störfaktoren. Ebenso wies der mittlere Vitamin-D-Spiegel eine signifikante negative Korrelation mit COVID-19-Infektionen und -Mortalität auf, wenn er mit Störfaktoren kombiniert wurde. Die Prävalenz des Vitamin-D-Mangels ist signifikant positiv, der mittlere Vitamin-D-Spiegel hingegen signifikant negativ mit der Infektions- und Sterblichkeitsrate von COVID-19 in den asiatischen Ländern verbunden, wenn man alle Störfaktoren in die Vorhersage einbezieht.'
   tags: [Vitamin D, COVID-19, Infektion, Sterblichkeit, Asien]
