--- a/_studies/2021-03-29_10.3389_fnut.2021.660420.md
+++ b/_studies/2021-03-29_10.3389_fnut.2021.660420.md
@@ -1,7 +1,7 @@
 ---
 date:        2021-03-29
 title:       Frontiers in Nutrition
-authors:     'Akbar, MR, Wibowo1, A, Pranatal, R, et al.'
+authors:     'Akbar, MR, Wibowo, A, Pranatal, R, et al.'
 status:      default
 en:
   subtitle:    'Low Serum 25-hydroxyvitamin D (Vitamin D) Level Is Associated With Susceptibility to COVID-19, Severity, and Mortality: A Systematic Review and Meta-Analysis'
