--- a/_studies/2021-04-16_10.17179_excli2021-3530.md
+++ b/_studies/2021-04-16_10.17179_excli2021-3530.md
@@ -19,7 +19,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Selen zu Selenoproteinen - Rolle bei COVID-19'
+  subtitle:    'Von Selen zu Selenoproteinen - ihre Rolle bei COVID-19'
   ##
   description: 'Die Störung der antioxidativen Abwehr wurde beim schweren akuten respiratorischen Syndrom aufgrund einer SARS-CoV-Infektion nachgewiesen. Selen spielt eine wichtige Rolle bei der Verringerung der als Reaktion auf verschiedene Virusinfektionen produzierten ROS. Selenoprotein-Enzyme sind von wesentlicher Bedeutung bei der Bekämpfung von oxidativem Stress, der durch die übermäßige Bildung von ROS verursacht wird. Selen spielt auch eine Rolle bei der Hemmung der Aktivierung von NF-κB, wodurch Entzündungen gelindert werden. Bei Virusinfektionen hemmen Selenoproteine nachweislich die Interferonreaktion vom Typ I, modulieren die T-Zell-Proliferation und den oxidativen Burst in Makrophagen und hemmen virale Transkriptionsaktivatoren. Potenzielle viral kodierte Selenoproteine wurden durch computergestützte Analysen in verschiedenen viralen Genomen wie HIV-1, Japanisches Enzephalitis-Virus (JEV) und Hepatitis-C-Virus identifiziert. In dieser Übersicht werden die Rolle und die möglichen Mechanismen von Selen, Selenoproteinen und viral kodierten Selenoproteinen bei der Pathogenität von Virusinfektionen erörtert. Die Identifizierung potenzieller Selenoproteine im Genom von COVID 19 durch computergestützte Werkzeuge wird weitere Einblicke in ihre Rolle bei der Pathogenese viraler Infektionen geben.'
   tags: [COVID-19, Selen, Selenoproteine, viral kodierte Selenoproteine]
