--- a/_studies/2020-06-19_10.3389_fimmu.2020.01451.md
+++ b/_studies/2020-06-19_10.3389_fimmu.2020.01451.md
@@ -1,7 +1,7 @@
 ---
 date:        2020-06-19
 title:       Frontiers in Immunology 
-authors:      'Biancatelli, RMLC, Berrill, M, Catravas JD et al.'
+authors:      'Biancatelli, RMLC, Berrill, M, Catravas, JD, et al.'
 status:       default
 en:
   subtitle:    'Quercetin and Vitamin C: An Experimental, Synergistic Therapy for the Prevention and Treatment of SARS-CoV-2 Related Disease (COVID-19)'
