--- a/_studies/2021-03-23_10.1016_j.clnesp.2021.03.012.md
+++ b/_studies/2021-03-23_10.1016_j.clnesp.2021.03.012.md
@@ -10,8 +10,7 @@ authors:      'Berger, MM, Herter-Aeberli, I, Zimmermann, MB, et al.'
 status:       default
 ##
 en:
-  subtitle:    'Strengthening the immunity of the Swiss population with micronutrients: A narrative review and call for action
-'
+  subtitle:    'Strengthening the immunity of the Swiss population with micronutrients: A narrative review and call for action'
   ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
   ##
   description: 'The enormous health impact of the COVID-19 pandemic has refocused attention on measures to optimize immune function and vaccine response. Dietary deficiencies of micronutrients can weaken adaptive immunity. The aim of this review was to examine links between micronutrients, immune function and COVID-19 infection, with a focus on nutritional risks in subgroups of the Swiss population. Scoping review on the associations between selected micronutrients (vitamins D and C, iron, selenium, zinc, and n-3 PUFAs) and immunity, with particular reference to the Swiss population. These nutrients were chosen because previous EFSA reviews have concluded they play a key role in immunity. The review discusses the available knowledge on links between sufficient nutrient status, optimal immune function, and prevention of respiratory tract infections. Because of the rapid spread of the COVID-19 pandemic, controlled intervention studies of micronutrients in the context of COVID-19 infection are now underway, but evidence is not yet available to draw conclusions. The anti-inflammatory properties of n-3 PUFAs are well established. In Switzerland, several subgroups of the population are at clear risk of nutrient deficiencies; e.g., older adults, multiple comorbidities, obesity, pregnancy, and institutionalized. Low intakes of n-3 PUFA are present in a large proportion of the population. There are clear and strong relationships between micronutrient and n-3 PUFA status and immune function, and subgroups of the Swiss population are at risk for deficient intakes. Therefore, during the COVID-19 pandemic, as a complement to a healthy and balanced diet, it may be prudent to consider supplementation with a combination of moderate doses of Vitamins C and D, as well as of Se, Zn and n-3 PUFA, in risk groups.'
