--- a/_studies/2021-05-01_0.26355_eurrev_202105_25963.md
+++ b/_studies/2021-05-01_0.26355_eurrev_202105_25963.md
@@ -12,5 +12,5 @@ de:
   description: 'Angiotensin Converting Enzyme 2 (ACE2) hat eine potentiell widersprüchliche Rolle in Gesundheit und Krankheit. Das Coronavirus COVID-19 bindet an menschliche Zellen über den ACE2-Rezeptor, der in fast allen Körperorganen vorkommt. Eine Erhöhung der ACE2-Rezeptorwerte auf Herz- und Lungenzellen kann dem Virus mehr zellulären Zugang verschaffen und so die Infektion verschlimmern. Daher wird ACE2 als eines der wichtigsten Zielmoleküle für die COVID-19-Therapie vorgeschlagen. Diese Hypothese basiert auf der schützenden Rolle von Medikamenten, die auf ACE2 wirken. In dieser Übersicht werden daher die Auswirkungen und Herausforderungen der Verwendung von ACE2 als Ziel in der derzeitigen COVID-19-Therapie erörtert.'
   tags: [COVID-19, Angiotensin konvertierendes Enzym 2 (ACE2), Azithromycin, Hydroxychloroquin, Zink, Vitamin D]
 group:       "Treatments"
-credit:      https://doi.-org/0.26355/eurrev_202105_25963
+credit:      https://doi.org/10.26355/eurrev_202105_25963
 ---
