--- a/_studies/2021-05-19_10.1093_jn_nxab059.md
+++ b/_studies/2021-05-19_10.1093_jn_nxab059.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Die Rolle der Ernährung bei der Anfälligkeit für COVID-19 und der Schwere der Erkrankung: Systematic Review'
+  subtitle:    'Die Rolle der Ernährung bei der Anfälligkeit für COVID-19 und der Schwere der Erkrankung: Systematische Überprüfung'
   ##
   description: 'Viele Nährstoffe haben starke immunmodulatorische Wirkungen, die die Anfälligkeit für eine Infektion mit dem Coronavirus 2019 (COVID-19), das Auftreten von Symptomen, die Wahrscheinlichkeit einer schweren Erkrankung und das Überleben beeinflussen können. Ziel war, die neuesten Erkenntnisse darüber zu überprüfen, wie Mangelernährung in all ihren Formen (Unter- und Überernährung sowie Mikronährstoffstatus) sowohl die Anfälligkeit für COVID-19 als auch das Fortschreiten der Erkrankung beeinflussen kann. Wir haben Informationen zu 13 ernährungsbezogenen Komponenten und ihren potenziellen Wechselwirkungen mit COVID-19 zusammengefasst: Übergewicht, Fettleibigkeit und Diabetes, Protein-Energie-Mangelernährung, Anämie, Vitamine A, C, D und E, PUFAs, Eisen, Selen, Zink, Antioxidantien und Ernährungsunterstützung. Für jeden Abschnitt bieten wir: 1) eine Übersicht über das einschlägige Material, 2) eine systematische Literaturrecherche in den Datenbanken PubMed und EMBASE, einschließlich einer Vielzahl von Preprint-Servern, und 3) ein Screening von 6 Registern für klinische Studien. Berücksichtigt wurden alle Originalforschungsarbeiten ohne Einschränkung des Studiendesigns, wenn sie sich auf folgende Themen bezogen: 1) Coronavirus (CoV) 2 des schweren akuten respiratorischen Syndroms (SARS-CoV-2), CoV des Middle East Respiratory Syndroms (MERS-CoV) oder SARS-CoV-Viren und 2) Krankheitsanfälligkeit oder 3) Krankheitsverlauf und 4) die Ernährungskomponente. Die Recherchen fanden zwischen dem 16. Mai und dem 11. August 2020 statt. Bei den 13 Recherchen wurden 2732 Artikel aus PubMed und EMBASE, 4164 Artikel aus den Preprint-Servern und 433 Studien gefunden. In der abschließenden narrativen Synthese wurden 22 veröffentlichte Artikel, 38 Preprint-Artikel und 79 Studien berücksichtigt. Derzeit gibt es nur begrenzte Belege dafür, dass hochdosierte Ergänzungen von Mikronährstoffen entweder schwere Erkrankungen verhindern oder die Genesung beschleunigen können. Die Ergebnisse der klinischen Studien werden jedoch mit Spannung erwartet. Angesichts der bekannten Auswirkungen aller Formen von Mangelernährung auf das Immunsystem sind Strategien des öffentlichen Gesundheitswesens zur Verringerung von Mikronährstoffmangel und Unterernährung weiterhin von entscheidender Bedeutung. Darüber hinaus gibt es deutliche Hinweise darauf, dass die Prävention von Fettleibigkeit und Typ-2-Diabetes das Risiko für schwerwiegende COVID-19-Folgen verringert.'
   tags: [SARS-CoV-2, COVID-19, Ernährung, Krankheitsrisiko, Krankheitsverlauf, Mikronährstoffe, systematische Überprüfung]
