--- a/_studies/2021-11-02_10.1371_journal.pone.0259317.md
+++ b/_studies/2021-11-02_10.1371_journal.pone.0259317.md
@@ -1,6 +1,6 @@
 ---
-date:        2020-11-02
-title:       Plos One
+date:        2021-11-02
+title:       PLoS ONE
 authors:      'Quincho-Lopez, A, Benites-Ibarra, CA, Hilario-Gomez, MM, et al.'
 status:     default
 en:
