--- a/_studies/2020-05-11_10.31989_ffhd.v10i5.707.md
+++ b/_studies/2020-05-11_10.31989_ffhd.v10i5.707.md
@@ -9,7 +9,7 @@ authors:      'Haslberger, A, Jacob, U, Hippe, B, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Mechanisms of selected functional foods against viral infections with a view on COVID-19: Mini review'
