--- a/_studies/2020-12-23_10.3389_fcvm.2020.616527.md
+++ b/_studies/2020-12-23_10.3389_fcvm.2020.616527.md
@@ -2,7 +2,7 @@
 date:        2020-12-23
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Front. Cardiovasc. Med.,
+title:       Frontiers in Cardiovascular Medicine
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Gorman, S, Weller, RB'
