--- a/_studies/2021-03-05_10.3389_fpubh.2021.624559.md
+++ b/_studies/2021-03-05_10.3389_fpubh.2021.624559.md
@@ -2,7 +2,7 @@
 date:        2021-03-05
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Front. Public Health
+title:       Frontiers in Public Health
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Teshome, A, Adane, A, Girma, B, et al.'
