--- a/_studies/2021-03-23_10.1016_j.clnesp.2021.03.012.md
+++ b/_studies/2021-03-23_10.1016_j.clnesp.2021.03.012.md
@@ -2,7 +2,7 @@
 date:        2021-03-23
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Clinical Nutrition Espen
+title:       Clinical Nutrition ESPEN
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Berger, MM, Herter-Aeberli, I, Zimmermann, MB, et al.'
