--- a/_studies/2021-12-14_10.1016_j.jviromet.2021.114418.md
+++ b/_studies/2021-12-14_10.1016_j.jviromet.2021.114418.md
@@ -8,8 +8,8 @@ title:       Journal of Virological Methods
 authors:      'Saxena, P, Nigam, K, Mukherjee, S, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
-status:       Preprint
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+status:       default
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Relation of Vitamin D to COVID-19'
