--- a/_studies/2020-05-08_10.3390_pr8050549.md
+++ b/_studies/2020-05-08_10.3390_pr8050549.md
@@ -9,7 +9,7 @@ authors:      'Meneguzzo, F, Ciriminna, R, Zabini, F, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Review of Evidence Available on Hesperidin-Rich Products as Potential Tools against COVID-19 and Hydrodynamic Cavitation-Based Extraction as a Method of Increasing Their Production'
