--- a/_studies/2020-06-25_10.1002_rmv.2119.md
+++ b/_studies/2020-06-25_10.1002_rmv.2119.md
@@ -9,7 +9,7 @@ authors:      'Malek Mahdavi, A'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'A brief review of interplay between vitamin D and angiotensin‐converting enzyme 2: Implications for a potential treatment for COVID‐19'
