--- a/_studies/2021-02-17_10.3389_fphar.2020.586993.md
+++ b/_studies/2021-02-17_10.3389_fphar.2020.586993.md
@@ -2,14 +2,14 @@
 date:        2021-02-17
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Front. Pharmacol.
+title:       Frontiers in Pharmacology
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Omrani, M, Keshavarz, M, Ebrahimi, SN, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Potential Natural Products Against Respiratory Viruses: A Perspective to Develop Anti-COVID-19 Medicines'
