--- a/_studies/2021-03-08_10.3389_fimmu.2021.648546.md
+++ b/_studies/2021-03-08_10.3389_fimmu.2021.648546.md
@@ -2,7 +2,7 @@
 date:        2021-03-08
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Front. Immunol.
+title:       Frontiers in Immunology
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Feketea, G, Vlacha, V, Bocsan, IC, et al.'
