--- a/_studies/2021-05-01_0.26355_eurrev_202105_25963.md
+++ b/_studies/2021-05-01_0.26355_eurrev_202105_25963.md
@@ -1,6 +1,6 @@
 ---
 date:        2021-05-01
-title:       Eur. Rev. Med. Pharmacol. Sci.
+title:       European Review for Medical and Pharmacological Sciences
 authors:      'Hetta, HF, Muhammad, K, Algammal, AM, et al.'
 status:       default
 en:
