--- a/_studies/2021-08-03_10.1016_j.nmni.2021.100924.md
+++ b/_studies/2021-08-03_10.1016_j.nmni.2021.100924.md
@@ -1,16 +1,8 @@
 ---
 date:        2021-08-03
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
-title:       New Microbes and new Infections 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors:      'Santin, AD, Scheim, DE, McCullough, PA, et a.'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
-status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
-##
+title:       New Microbes and New Infections
+authors:     'Santin, AD, Scheim, E, McCullough, PA, et al.'
+status:     default
 en:
   subtitle:  'Ivermectin: a multifaceted drug of Nobel prize-honoured distinction with indicated efficacy against a new global scourge, COVID-19'
   description: 'In 2015, the Nobel Committee for Physiology or Medicine, in its only award for treatments of infectious diseases since six decades prior, honoured the discovery of ivermectin (IVM), a multifaceted drug deployed against some of the world’s most devastating tropical diseases. Since March 2020, when IVM was first used against a new global scourge, COVID-19, more than 20 randomized clinical trials (RCTs) have tracked such inpatient and outpatient treatments. Six of seven meta-analyses of IVM treatment RCTs reporting in 2021 found notable reductions in COVID-19 fatalities, with a mean 31% relative risk of mortality vs. controls. During mass IVM treatments in Peru, excess deaths fell by a mean of 74% over 30 days in its ten states with the most extensive treatments. Reductions in deaths correlated with the extent of IVM distributions in all 25 states with p < 0.002. Sharp reductions in morbidity using IVM were also observed in two animal models, of SARS-CoV-2 and a related betacoronavirus. The indicated biological mechanism of IVM, competitive binding with SARS-CoV-2 spike protein, is likely non-epitope specific, possibly yielding full efficacy against emerging viral mutant strains.'
