--- a/_studies/2021-09-08_10.3390_diagnostics11091645.md
+++ b/_studies/2021-09-08_10.3390_diagnostics11091645.md
@@ -2,14 +2,14 @@
 date:        2021-09-08
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Diagnostics 
+title:       Diagnostics
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Cruciani, M, Pati, I, Masiello, F, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Ivermectin for Prophylaxis and Treatment of COVID-19: A Systematic Review and Meta-Analysis'
