--- a/_studies/2021-10-18_0.3390_ijerph182010950.md
+++ b/_studies/2021-10-18_0.3390_ijerph182010950.md
@@ -1,6 +1,6 @@
 ---
 date:        2021-10-18
-title:       IJERPH 
+title:       International Journal of Environmental Research and Public Health 
 authors:      'Nakano, T, Chiang, KC, Chen, CC, et al.'
 status:     default
 en:
