--- a/_studies/2021-11-16_10.3390_ijerph182212001.md
+++ b/_studies/2021-11-16_10.3390_ijerph182212001.md
@@ -2,7 +2,7 @@
 date:        2021-11-16
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       IJERPH
+title:       International Journal of Environmental Research and Public Health
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'El Zakhem, A, Chalhoub, MA, Bassil, M'
