--- a/_studies/2021-09-09_arXiv_2109.04509v1.md
+++ b/_studies/2021-09-09_arXiv_2109.04509v1.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-09-09
-title:  Preprint from ArXiv 
+title:  ArXiv 
 authors: 'Wang R, Chen J, Hozumi Y, et al.'
 status:       Preprint
 en:
