--- a/_studies/2021-12-08_researchgate_355581860.md
+++ b/_studies/2021-12-08_researchgate_355581860.md
@@ -1,6 +1,6 @@
 ---
 date:        2021-12-08
-title:       Preprint from Researchgate
+title:       Researchgate
 authors:      'Pantazatos, SP, Seligmann, H'
 status:       Preprint
 en:
