--- a/_studies/2021-12-20_10.52586_E884.md
+++ b/_studies/2021-12-20_10.52586_E884.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-12-20
-title:    Frontiers in Bioscience (Elite Edition)
+title:    Frontiers in Bioscience-Elite
 authors: 'Bhattacharyya, P, Das, S, Aich S, et al.'
 status:   default
 en:
