--- a/_studies/2022-01-12_10.1590_SciELOPreprints.3483.md
+++ b/_studies/2022-01-12_10.1590_SciELOPreprints.3483.md
@@ -1,7 +1,7 @@
 ---
 date: 2022-01-12
 ##
-title:    SciELO Preprints 
+title:    SciELO 
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors: 'Moraes, R, Correa, M, Martins-Filho, P, et al.'
