--- a/_studies/2021-02-22_10.3389_fmolb.2021.632290.md
+++ b/_studies/2021-02-22_10.3389_fmolb.2021.632290.md
@@ -1,6 +1,6 @@
 ---
 date:        2021-02-22
-title:       Front. Mol. Biosci.
+title:       Frontiers in Molecular Biosciences
 authors:      'Barberis, E, Vanella, VV, Falasca, M, et al.'
 en:
   subtitle:    'Circulating Exosomes Are Strongly Involved in SARS-CoV-2 Infection'
