--- a/_studies/2022-01-06_10.3390_signals3010002.md
+++ b/_studies/2022-01-06_10.3390_signals3010002.md
@@ -1,7 +1,7 @@
 ---
 date: 2022-01-06
 ##
-title:    signals 
+title:    Signals 
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors: 'Daskalos, A-C, Theodoropoulos, P, Spandonidis, C, et al.'
