--- a/_studies/2021-11-28_10.1093_cid_ciab989.md
+++ b/_studies/2021-11-28_10.1093_cid_ciab989.md
@@ -1,16 +1,42 @@
 ---
-date:        2021-11-28
-title:       Clinical Infectious Diseases
-authors:      'Chua, GT, Kwan, MYW, Chui, CSL, et al.'
-status:       default
+date: 2021-11-28
+## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
+##
+title:  Clinical Infectious Diseases
+
+## Titel der Publikation, beispielweise The Lancet.
+##
+authors: 'Chua, GT, Kwan, MYW, Chui, CSL, et al.'
+## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten! 
+##
+## Bitte beachtet, daß der Text selbst keine geraden Anführungszeichen (Schreibmaschinensatz) – ' – enthalten darf. Das ist ganz wichtig! Bitte solche Anführungszeichen je nach Bedarf mit typografischen, öffnenden oder schließenden Anführungszeichen – ’ oder ‘ – ersetzen. Das gilt für alle Texte innerhalb gerader Anführungszeichen (authors, subtitle, description).
+##
+status:       Peer Reviewed
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+##
 en:
-  subtitle:    'Epidemiology of Acute Myocarditis/Pericarditis in Hong Kong Adolescents Following Comirnaty Vaccination'
+  subtitle: 'Epidemiology of Acute Myocarditis/Pericarditis in Hong Kong Adolescents Following Comirnaty Vaccination'
+  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
+  ##
   description: 'Background: Age-specific incidence of acute myocarditis/pericarditis in adolescents following Comirnaty vaccination in Asia is lacking. This study aimed to study the clinical characteristics and incidence of acute myocarditis/pericarditis among Hong Kong adolescents following Comirnaty vaccination. Methods: This is a population cohort study in Hong Kong that monitored adverse events following immunization through a pharmacovigilance system for COVID-19 vaccines. All adolescents aged between 12 and 17 years following Comirnaty vaccination were monitored under the COVID-19 vaccine Adverse Event Response and Evaluation Programme. The clinical characteristics and overall incidence of acute myocarditis/pericarditis in adolescents following Comirnaty vaccination were analysed.Results Between 14 June 2021 and 4 September 2021, 33 Chinese adolescents who developed acute myocarditis/pericarditis following Comirnaty vaccination were identified. 29 (87.88%) were males and 4 (12.12%) were females, with a median age of 15.25 years. 27 (81.82%) and 6 (18.18%) cases developed acute myocarditis/pericarditis after receiving the second and first dose, respectively. All cases are mild and required only conservative management.The overall incidence of acute myocarditis/pericarditis was 18.52 (95% Confidence Interval [CI], 11.67-29.01) per 100,000 persons vaccinated. The incidence after the first and second doses were 3.37 (95%CI 1.12-9.51) and 21.22 (95%CI 13.78-32.28 per 100,000 persons vaccinated, respectively. Among male adolescents, the incidence after the first and second doses were 5.57 (95% CI 2.38-12.53) and 37.32 (95% CI 26.98-51.25) per 100,000 persons vaccinated. Conclusions There is a significant increase in the risk of acute myocarditis/pericarditis following Comirnaty vaccination among Chinese male adolescents, especially after the second dose.'
-  tags:     []
+  ## Abstract, Summary oder Background der Studie – bitte die texteinklammernden, einfachen, geraden Anführungszeichen beachten!
+  ##
+  tags: []
+  ## Keywords bitte mit Kommata trennen.
+  ##
 de: 
-  subtitle:    'Epidemiologie der akuten Myokarditis/Perikarditis bei Jugendlichen in Hongkong nach der Komirnaty-Impfung'
-  description: 'Hintergrund. Über die altersspezifische Inzidenz von akuter Myokarditis/Perikarditis bei Jugendlichen nach einer Comirnaty-Impfung in Asien gibt es keine Daten. Ziel dieser Studie war es, die klinischen Merkmale und die Häufigkeit von akuter Myokarditis/Perikarditis bei Jugendlichen in Hongkong nach einer Comirnaty-Impfung zu untersuchen. Methoden. Es handelt sich um eine bevölkerungsbezogene Kohortenstudie in Hongkong, bei der unerwünschte Ereignisse nach einer Impfung über ein Pharmakovigilanzsystem für COVID-19-Impfstoffe überwacht wurden. Alle Jugendlichen im Alter von 12 bis 17 Jahren, die eine Comirnaty-Impfung erhalten hatten, wurden im Rahmen des COVID-19-Impfstoffs im Rahmen des Programms zur Erfassung und Bewertung unerwünschter Ereignisse beobachtet. Die klinischen Merkmale und die Gesamthäufigkeit der akuten Myokarditis/Perikarditis bei Jugendlichen nach einer Comirnaty-Impfung wurden analysiert. Ergebnisse. Zwischen dem 14. Juni 2021 und dem 4. September 2021 wurden 33 chinesische Jugendliche ermittelt, die nach der Comirnaty-Impfung eine akute Myokarditis/Perikarditis entwickelten. 29 (87,88 %) waren männlich und 4 (12,12 %) weiblich, mit einem Durchschnittsalter von 15,25 Jahren. 27 (81,82 %) und 6 (18,18 %) Fälle entwickelten nach der zweiten bzw. ersten Dosis eine akute Myokarditis/Perikarditis. Die Gesamthäufigkeit der akuten Myokarditis/Perikarditis betrug 18,52 (95 % Konfidenzintervall [KI], 11,67-29,01) pro 100.000 Geimpfte. Die Inzidenz nach der ersten und zweiten Dosis betrug 3,37 (95%CI 1,12-9,51) bzw. 21,22 (95%CI 13,78-32,28) pro 100.000 Geimpfte. Bei den männlichen Jugendlichen lag die Inzidenz nach der ersten und zweiten Dosis bei 5,57 (95% CI 2,38-12,53) und 37,32 (95% CI 26,98-51,25) pro 100.000 Geimpfte. Schlussfolgerungen. Das Risiko einer akuten Myokarditis/Perikarditis ist bei chinesischen männlichen Jugendlichen nach einer Comirnaty-Impfung deutlich erhöht, insbesondere nach der zweiten Dosis.'
-  tags:     [Myocarditis, Pericarditis, adolescents, Comirnaty, Hong Kong]
-group:       "Vaccines"
-credit:       https://doi.org/10.1093/cid/ciab989
----
+## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
+##
+  subtitle: 'Epidemiologie der akuten Myokarditis/Perikarditis bei Jugendlichen in Hongkong nach der Komirnaty-Impfung'
+##
+  description: 'Über die altersspezifische Inzidenz von akuter Myokarditis/Perikarditis bei Jugendlichen nach einer Comirnaty-Impfung in Asien gibt es keine Daten. Ziel dieser Studie war es, die klinischen Merkmale und die Häufigkeit von akuter Myokarditis/Perikarditis bei Jugendlichen in Hongkong nach einer Comirnaty-Impfung zu untersuchen. Methoden. Es handelt sich um eine bevölkerungsbezogene Kohortenstudie in Hongkong, bei der unerwünschte Ereignisse nach einer Impfung über ein Pharmakovigilanzsystem für COVID-19-Impfstoffe überwacht wurden. Alle Jugendlichen im Alter von 12 bis 17 Jahren, die eine Comirnaty-Impfung erhalten hatten, wurden im Rahmen des COVID-19-Impfstoffs im Rahmen des Programms zur Erfassung und Bewertung unerwünschter Ereignisse beobachtet. Die klinischen Merkmale und die Gesamthäufigkeit der akuten Myokarditis/Perikarditis bei Jugendlichen nach einer Comirnaty-Impfung wurden analysiert. Ergebnisse. Zwischen dem 14. Juni 2021 und dem 4. September 2021 wurden 33 chinesische Jugendliche ermittelt, die nach der Comirnaty-Impfung eine akute Myokarditis/Perikarditis entwickelten. 29 (87,88 %) waren männlich und 4 (12,12 %) weiblich, mit einem Durchschnittsalter von 15,25 Jahren. 27 (81,82 %) und 6 (18,18 %) Fälle entwickelten nach der zweiten bzw. ersten Dosis eine akute Myokarditis/Perikarditis. Die Gesamthäufigkeit der akuten Myokarditis/Perikarditis betrug 18,52 (95 % Konfidenzintervall [KI], 11,67-29,01) pro 100.000 Geimpfte. Die Inzidenz nach der ersten und zweiten Dosis betrug 3,37 (95%CI 1,12-9,51) bzw. 21,22 (95%CI 13,78-32,28) pro 100.000 Geimpfte. Bei den männlichen Jugendlichen lag die Inzidenz nach der ersten und zweiten Dosis bei 5,57 (95% CI 2,38-12,53) und 37,32 (95% CI 26,98-51,25) pro 100.000 Geimpfte. Schlussfolgerungen. Das Risiko einer akuten Myokarditis/Perikarditis ist bei chinesischen männlichen Jugendlichen nach einer Comirnaty-Impfung deutlich erhöht, insbesondere nach der zweiten Dosis.'
+tags: [Myocarditis, Pericarditis, adolescents, Comirnaty, Hong Kong]
+group: "Vaccines"
+## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
+##
+credit:  https://doi.org/10.1093/cid/ciab989
+## DOI-Link zur Studien-Website.
+##
+## Der Dateinamen setzt sich aus Datum – Unterstrich - DOI der Organisation – Unterstrich – DOI der Studie und der Dateiendung zusammen.
+##
+## 2021-11-28_10.1093/cid/ciab989.md
