--- a/_studies/2021-12-07_10.1021_acs.jpclett.1c03380.md
+++ b/_studies/2021-12-07_10.1021_acs.jpclett.1c03380.md
@@ -1,16 +1,41 @@
 ---
 date: 2021-12-07
-title:  Journal of Phys Chem Lett
-authors: 'Rui Wang, Jiahui Chen, Guo-Wei Wei'
-status:       default
+## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
+##
+title:  The Journal of Physical Chemistry Letters
+
+## Titel der Publikation, beispielweise The Lancet.
+##
+authors: 'Wang, R, Chen, J, Wei, GW'
+## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten! 
+##
+## Bitte beachtet, daß der Text selbst keine geraden Anführungszeichen (Schreibmaschinensatz) – ' – enthalten darf. Das ist ganz wichtig! Bitte solche Anführungszeichen je nach Bedarf mit typografischen, öffnenden oder schließenden Anführungszeichen – ’ oder ‘ – ersetzen. Das gilt für alle Texte innerhalb gerader Anführungszeichen (authors, subtitle, description).
+##
+status:       Peer Reviewed
+## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+##
 en:
   subtitle: 'Mechanisms of SARS-CoV-2 Evolution Revealing Vaccine-Resistant Mutations in Europe and America'
-  description: 'The importance of understanding SARS-CoV-2 evolution cannot be overlooked. Recent studies confirm that natural selection is the dominating mechanism of SARS-CoV-2 evolution, which favors mutations that strengthen viral infectivity. Here, we demonstrate that vaccine-breakthrough or antibody-resistant mutations provide a new mechanism of viral evolution. Specifically, vaccine-resistant mutation Y449S in the spike (S) protein receptor-binding domain, which occurred in co-mutations Y449S and N501Y, has reduced infectivity compared to that of the original SARS-CoV-2 but can disrupt existing antibodies that neutralize the virus. By tracking the evolutionary trajectories of vaccine-resistant mutations in more than 2.2 million SARS-CoV-2 genomes, we reveal that the occurrence and frequency of vaccine-resistant mutations correlate strongly with the vaccination rates in Europe and America. We anticipate that as a complementary transmission pathway, vaccine-breakthrough or antibody-resistant mutations, like those in Omicron, will become a dominating mechanism of SARS-CoV-2 evolution when most of the world’s population is either vaccinated or infected. Our study sheds light on SARS-CoV-2 evolution and transmission and enables the design of the next-generation mutation-proof vaccines and antibody drugs.'
+  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
+  ##
+  description: 'The importance of understanding SARS-CoV-2 evolution cannot be overlooked. Recent studies confirm that natural selection is the dominating mechanism of SARS-CoV-2 evolution, which favors mutations that strengthen viral infectivity. Here, we demonstrate that vaccine-breakthrough or antibody-resistant mutations provide a new mechanism of viral evolution. Specifically, vaccine-resistant mutation Y449S in the spike (S) protein receptor-binding domain, which occurred in co-mutations Y449S and N501Y, has reduced infectivity compared to that of the original SARS-CoV-2 but can disrupt existing antibodies that neutralize the virus. By tracking the evolutionary trajectories of vaccine-resistant mutations in more than 2.2 million SARS-CoV-2 genomes, we reveal that the occurrence and frequency of vaccine-resistant mutations correlate strongly with the vaccination rates in Europe and America. We anticipate that as a complementary transmission pathway, vaccine-breakthrough or antibody-resistant mutations, like those in Omicron, will become a dominating mechanism of SARS-CoV-2 evolution when most of the world’s population is either vaccinated or infected. Our study sheds light on SARS-CoV-2 evolution and transmission and enables the design of the next-generation mutation-proof vaccines and antibody drugs'
+  ## Abstract, Summary oder Background der Studie – bitte die texteinklammernden, einfachen, geraden Anführungszeichen beachten!
+  ##
   tags: []
+  ## Keywords bitte mit Kommata trennen.
+  ##
 de: 
+## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
+##
   subtitle: 'Mechanismen der SARS-CoV-2-Evolution, die impfstoffresistente Mutationen in Europa und Amerika aufzeigen'
   description: 'Die Bedeutung des Verständnisses der Evolution von SARS-CoV-2 kann nicht übersehen werden. Jüngste Studien bestätigen, dass die natürliche Selektion der dominierende Mechanismus der SARS-CoV-2-Evolution ist, der Mutationen begünstigt, die die virale Infektiosität verstärken. Hier zeigen wir, dass Mutationen, die einen Impfstoff-Durchbruch bewirken oder gegen Antikörper resistent sind, einen neuen Mechanismus der viralen Evolution darstellen. Insbesondere die impfstoffresistente Mutation Y449S in der Rezeptor-bindenden Domäne des Spike-Proteins (S), die in den Ko-Mutationen Y449S und N501Y auftrat, hat eine geringere Infektiosität als das ursprüngliche SARS-CoV-2, kann aber vorhandene Antikörper, die das Virus neutralisieren, unterbrechen. Durch die Verfolgung der evolutionären Entwicklung von impfstoffresistenten Mutationen in mehr als 2,2 Millionen SARS-CoV-2-Genomen zeigen wir, dass das Auftreten und die Häufigkeit von impfstoffresistenten Mutationen stark mit den Impfraten in Europa und Amerika korrelieren. Wir gehen davon aus, dass Impfstoff-Durchbruch- oder Antikörper-resistente Mutationen, wie die in Omicron, als zusätzlicher Übertragungsweg zu einem dominierenden Mechanismus der SARS-CoV-2-Evolution werden, wenn der Großteil der Weltbevölkerung entweder geimpft oder infiziert ist. Unsere Studie wirft ein Licht auf die Evolution und Übertragung von SARS-CoV-2 und ermöglicht die Entwicklung von mutationssicheren Impfstoffen und Antikörper-Medikamenten der nächsten Generation.'
-  tags: []
+tags: []
 group: "Vaccines"
+## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
+##
 credit:  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8672435/
----
+## DOI-Link zur Studien-Website.
+##
+## Der Dateinamen setzt sich aus Datum – Unterstrich - DOI der Organisation – Unterstrich – DOI der Studie und der Dateiendung zusammen.
+##
+## 2021-12-07_10.1021_acs.jpclett.1c03380.md
