update studies from Kerstin

--- a/_studies/2021-10-29_10.3389_fcvm.2021.758996.md
+++ b/_studies/2021-10-29_10.3389_fcvm.2021.758996.md
@@ -6,11 +6,11 @@ status:       default
 en:
   subtitle:    'Case Report: Acute Fulminant Myocarditis and Cardiogenic Shock After Messenger RNA Coronavirus Disease 2019 Vaccination Requiring Extracorporeal Cardiopulmonary Resuscitation'
   description: 'Recently, myocarditis following messenger RNA (mRNA) coronavirus disease 2019 (COVID-19) vaccination has become an important social issue worldwide. According to the reports so far, myocarditis related to mRNA COVID-19 vaccination is rare and usually associated with a benign clinical course without intensive care or any sequelae of fulminant myocarditis. Here, we report a case of acute fulminant myocarditis and cardiogenic shock after the mRNA COVID-19 vaccination, requiring extracorporeal cardiopulmonary resuscitation. Clinicians should keep in mind the possibility of progression to fulminant myocarditis in patients who presented with suggestive symptoms or signs of myocarditis after the COVID-19 vaccination.'
-  tags:     []
+  tags:     [fulminant myocarditis, COVID-19, vaccination, extracorporeal membrane oxygenation, case report]
 de: 
   subtitle:    'Fallbericht: Akute fulminante Myokarditis und kardiogener Schock nach Impfung gegen Messenger-RNA-Coronavirus-Krankheit 2019, die eine extrakorporale kardiopulmonale Wiederbelebung erforderte'
   description: 'In jüngster Zeit ist die Myokarditis nach einer Impfung gegen die Coronavirus-Krankheit 2019 (COVID-19) mit Boten-RNA (mRNA) weltweit zu einem wichtigen gesellschaftlichen Thema geworden. Nach den bisherigen Berichten ist eine Myokarditis im Zusammenhang mit einer mRNA-COVID-19-Impfung selten und in der Regel mit einem gutartigen klinischen Verlauf ohne Intensivbehandlung oder Folgeerscheinungen einer fulminanten Myokarditis verbunden. Hier berichten wir über einen Fall von akuter fulminanter Myokarditis und kardiogenem Schock nach der mRNA-COVID-19-Impfung, der eine extrakorporale kardiopulmonale Wiederbelebung erforderte. Kliniker sollten bei Patienten, die nach der COVID-19-Impfung suggestive Symptome oder Anzeichen einer Myokarditis aufweisen, die Möglichkeit einer Progression zu einer fulminanten Myokarditis im Auge behalten.'
-  tags:     [fulminant myocarditis, COVID-19, vaccination, extracorporeal membrane oxygenation, case report]
+  tags:     [fulminante Myokarditis, COVID-19, Impfung, extrakorporale Membranoxygenierung, Fallbericht]
 group:       "Vaccines"
 credit:        https://doi.org/10.3389/fcvm.2021.758996
 ---
