--- a/_studies/2021-11-02_10.1136_bmj.n2635.md
+++ b/_studies/2021-11-02_10.1136_bmj.n2635.md
@@ -1,7 +1,7 @@
 ---
 date: 2021-11-02
 title: BMJ Investigation  
-authors: 'Paul D Thacker'
+authors: 'Thacker, PD'
 status:       default
 en:
   subtitle: 'Covid-19: Researcher blows the whistle on data integrity issues in Pfizer’s vaccine trial'
