--- a/_studies/2021-09-11_10.1016_j.metop.2021.100101.md
+++ b/_studies/2021-09-11_10.1016_j.metop.2021.100101.md
@@ -10,7 +10,7 @@ en:
 de: 
   subtitle: 'Impfstoffinduzierte thrombotische Thrombozytopenie: Das düstere Kapitel einer Erfolgsgeschichte".'
   description: 'Das Bekanntwerden der seltenen, aber schwerwiegenden und potenziell tödlichen Komplikation der impfstoffinduzierten thrombotischen Thrombozytopenie (VITT) gab Anlass zu Bedenken hinsichtlich der Sicherheit von COVID-19-Impfstoffen und führte in vielen Ländern zu einem Überdenken der Impfstrategien. Nach der Beschreibung von VITT bei Empfängern des adenoviralen Vektorimpfstoffs ChAdOx1 gab eine Überprüfung ähnlicher Fälle nach der Impfung mit Ad26.COV2-S Anlass zu der Frage, ob diese Entität eine potenzielle Klassenwirkung aller adenoviralen Vektorimpfstoffe darstellen könnte. Bei den meisten Fällen handelt es sich um Frauen, die in der Regel jünger als 60 Jahre sind und kurz (5-30 Tage) nach der Impfung eine Thrombozytopenie und thrombotische Manifestationen, gelegentlich an mehreren Stellen, aufweisen. Nach anfänglicher Unsicherheit wurden konkrete Empfehlungen für die Diagnose (klinischer Verdacht, erstes Laborscreening, PF4-Polyanion-Antikörper-ELISA) und die Behandlung der VITT (Nicht-Heparin-Antikoagulanzien, Kortikosteroide, intravenöses Immunglobulin) herausgegeben. Die Mechanismen, die diesem seltenen Syndrom zugrunde liegen, sind derzeit Gegenstand aktiver Forschung und umfassen Folgendes: 1) Produktion von PF4-Polyanion-Autoantikörpern; 2) Eintritt des adenoviralen Vektors in Megakaryozyten und anschließende Expression des Spike-Proteins auf der Thrombozytenoberfläche; 3) direkte Bindung und Aktivierung von Thrombozyten und Endothelzellen durch den adenoviralen Vektor; 4) Aktivierung von Endothel- und Entzündungszellen durch die PF4-Polyanion-Autoantikörper; 5) Vorhandensein eines entzündlichen Co-Signals; und 6) die Häufigkeit von zirkulierenden löslichen Spike-Protein-Varianten nach der Impfung. Neben der Analyse möglicher zugrunde liegender Mechanismen zielt diese Übersichtsarbeit darauf ab, die klinischen und epidemiologischen Merkmale der VITT zusammenzufassen, die aktuellen evidenzbasierten Empfehlungen zur diagnostischen und therapeutischen Abklärung der VITT vorzustellen und neue Dilemmata und Perspektiven zu diskutieren, die nach der Beschreibung dieser Entität entstanden sind.'
-  tags: [Adenoviral vector, Adenovirus, COVID-19, SARS-CoV-2, Vaccine induced thrombotic thrombocytopenia, Vaccine]
+  tags: [Adenoviraler Vektor, Adenovirus, COVID-19, SARS-CoV-2, Impfstoff-induzierte thrombotische Thrombozytopenie, Impfstoff]
 group:       "Vaccines"
 credit:      https://doi.org/10.1016/j.metop.2021.100101
 ---
